# sm-debugger

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
.github/workflows/: cmake.yml  vscode.yml
readme/: pt-br.md
src/: debugger.cpp  debugger.h  extension.cpp  extension.h  smsdk_config.h  utlbuffer.cpp  utlbuffer.h
src/sourcepawn/compiler/: assembler.cpp  data-queue.cpp  errors.cpp  expressions.cpp  lexer.cpp  main.cpp  pawncc.cpp  sc.h  sci18n.cpp  sctracker.cpp  sctracker.h  scvars.cpp  scvars.h
src/sourcepawn/include/: sp_vm_api.h  sp_vm_types.h
src/sourcepawn/include/smx/: smx-headers.h
src/sourcepawn/tests/compile-only/: fail-broken-if-conditional.sp  fail-duplicate-enum-struct-field.sp  fail-enum-struct-in-native.sp  fail-enum-struct-reference.sp  fail-return-indeterminate-array.sp
src/sourcepawn/vm/: code-allocator.h  file-utils.cpp  file-utils.h  method-info.h  plugin-context.cpp  plugin-context.h  plugin-runtime.cpp  plugin-runtime.h  smx-v1-image.cpp  smx-v1-image.h
src/sourcepawn/vm/x86/: jit_x86.cpp  jit_x86.h
vscode/: package-lock.json  package.json
vscode/src/: smDebug.ts  smRuntime.ts
